# krugg

./: .gitignore  Cargo.toml  README.md  eslint.config.js  flake.nix  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.js
crate/: Cargo.toml  build.rs  tauri.conf.json
crate/capabilities/: default.json
crate/src/: lib.rs  main.rs  state.rs
crate/src/commands/: mod.rs  process.rs
crates/krugg/: Cargo.toml  build.rs  tauri.conf.json
crates/krugg-model/: Cargo.toml
crates/krugg-model/src/: lib.rs
crates/krugg/capabilities/: default.json
crates/krugg/src/: channel.rs  commands.rs  ddragon.rs  lib.rs  main.rs  ugg.rs
crates/krugg/src/commands/: mod.rs
crates/tauri-plugin-lcu/: Cargo.toml  README.md  build.rs  package.json  tsconfig.json
crates/tauri-plugin-lcu/lib/: index.ts
crates/tauri-plugin-lcu/permissions/: default.toml
crates/tauri-plugin-lcu/permissions/autogenerated/: reference.md
crates/tauri-plugin-lcu/permissions/autogenerated/commands/: connected.toml  get_current_rune_page.toml  head.toml
crates/tauri-plugin-lcu/permissions/schemas/: schema.json
crates/tauri-plugin-lcu/src/: commands.rs  error.rs  http.rs  lib.rs  lockfile.rs
krugg-model/: Cargo.toml
krugg-model/src/: lib.rs
src/: app.css  app.d.ts
src-tauri/: Cargo.toml  build.rs  config.example.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: channel.rs  commands.rs  ddragon.rs  error.rs  lib.rs  main.rs  ugg.rs
src/lib/: channel.svelte.ts  channel.ts  commands.ts  events.svelte.ts  index.ts  stores.svelte.ts
src/lib/components/: Header.svelte  Tooltip.svelte
src/routes/: +layout.svelte  +page.svelte  Header.svelte
src/routes/champions/: +page.svelte  +page.ts
src/routes/champs/: +page.svelte  +page.ts  ChampModal.svelte  ChampsList.svelte
src/routes/champs/[champName]/: +page.svelte  +page.ts
src/routes/settings/: +page.svelte  +page.ts
tauri-plugin-lcu/: Cargo.toml  README.md  package.json  rollup.config.js  tsconfig.json
tauri-plugin-lcu/lib/: index.ts
tauri-plugin-lcu/permissions/: default.toml
tauri-plugin-lcu/permissions/autogenerated/: reference.md
tauri-plugin-lcu/permissions/autogenerated/commands/: get_current_summoner.toml  post.toml  put.toml  update_rune_page.toml
tauri-plugin-lcu/permissions/schemas/: schema.json
tauri-plugin-lcu/src/: error.rs  http.rs  lib.rs  lockfile.rs  state.rs
