[package]
name = "league-thingy"
publish = false
license = "Apache-2.0"
authors = ["ted@ted.ooo"]
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "league_thingy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
debug = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[build-dependencies]
tauri-build = "2.0.6"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.3.1", features = ["native-tls"] }
tauri-plugin-autostart = "2.2.0"
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-http = { version = "2.3.0", default-features = false, features = [
    "charset",
    "cookies",
    "http2",
    "json",
    "macos-system-configuration",
    "native-tls"
] }
tauri-plugin-opener = "2.2.6"
tauri-plugin-positioner = { version = "2.2.0", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.2.2"
tauri-plugin-store = "2.2.0"
