[package]
name = "krugg"
publish = false
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["ted@ted.ooo"]
repository = "https://github.com/tedbyron/krugg"

[lib]
# BUG: https://github.com/rust-lang/cargo/issues/8519
name = "krugg_lib"

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
ddragon = { version = "0.9.2", default-features = false, features = ["image"] }
http-cache-reqwest = "0.15.1"
levenshtein = "1.0.5"
lru = "0.13.0"
mimalloc = "0.1.44"
reqwest-middleware = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.4.1", features = ["native-tls"] }
tauri-plugin-autostart = "2.2.0"
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-opener = "2.2.6"
tauri-plugin-positioner = { version = "2.2.0", features = ["tray-icon"] }
tauri-plugin-prevent-default = "1.2.1"
tauri-plugin-shell = "2.2.0"
tauri-plugin-single-instance = "2.2.2"
tauri-plugin-store = "2.2.0"
thiserror = "2.0.12"
tokio-util = { version = "0.7.14", features = ["rt"] }
ugg-types = "0.8.1"
url = "2.5.4"

[dependencies.image]
version = "0.25.6"
default-features = false
# features = ["jpeg", "png", "rayon"]

[dependencies.tauri-plugin-http]
version = "2.4.2"
default-features = false
features = [
    "brotli",
    "charset",
    "cookies",
    "http2",
    "json",
    "macos-system-configuration",
    "native-tls",
]

[dependencies.tauri-plugin-lcu]
version = "0.1.0"
path = "../tauri-plugin-lcu"
features = ["tauri-plugin-store", "ugg-types"]

[dependencies.tokio]
version = "1.44.1"
default-features = false
features = ["rt", "rt-multi-thread"]
