[package]
name = "tauri-plugin-lcu"
publish = false
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["ted@ted.ooo"]
repository = "https://github.com/tedbyron/krugg"
links = "tauri-plugin-lcu"

[build-dependencies]
tauri-plugin = { version = "2.0.5", features = ["build"] }

[dependencies]
krugg-model = { version = "0.1.0", path = "../krugg-model" }
tauri = "2.3.1"
serde = "1.0.218"
thiserror = "2.0.12"
tauri-plugin-shell = "2.2.0"
tauri-plugin-store = "2.2.0"
