[package]
name = "tauri-plugin-lcu"
publish = false
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["ted@ted.ooo"]
repository = "https://github.com/tedbyron/krugg"
links = "tauri-plugin-lcu"

[build-dependencies]
tauri-plugin = { version = "2.0.5", features = ["build"] }

[dependencies]
base64ct = { version = "1.6.0", features = ["std"] }
notify-debouncer-full = "0.5.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tauri = "2.3.1"
tauri-plugin-shell = "2.2.0"
tauri-plugin-store = { version = "2.2.0", optional = true }
thiserror = "2.0.12"
tokio-util = { version = "0.7.13", features = ["rt"] }
ugg-types = { version = "0.7.0", optional = true }

[dependencies.tauri-plugin-http]
version = "2.3.0"
default-features = false
features = ["charset", "cookies", "http2", "json", "macos-system-configuration"]

[dependencies.tokio]
version = "1.44.0"
default-features = false
features = ["rt", "rt-multi-thread", "time"]

[features]
default = ["native-tls"]
native-tls = ["tauri-plugin-http/native-tls"]
native-tls-alpn = ["tauri-plugin-http/native-tls-alpn"]
native-tls-vendored = ["tauri-plugin-http/native-tls-vendored"]
rustls-tls = ["tauri-plugin-http/rustls-tls"]
rustls-tls-manual-roots = ["tauri-plugin-http/rustls-tls-manual-roots"]
rustls-tls-native-roots = ["tauri-plugin-http/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tauri-plugin-http/rustls-tls-webpki-roots"]
tauri-plugin-store = ["dep:tauri-plugin-store"]
ugg-types = ["dep:ugg-types"]
