[package]
name = "tauri-plugin-lcu"
publish = false
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["ted@ted.ooo"]
repository = "https://github.com/tedbyron/krugg"
links = "tauri-plugin-lcu"

[build-dependencies]
tauri-plugin = { version = "2.1.0", features = ["build"] }

[dependencies]
base64ct = { version = "1.7.3", features = ["std"] }
notify-debouncer-full = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = "2.4.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-store = { version = "2.2.0", optional = true }
thiserror = "2.0.12"
tokio-util = { version = "0.7.14", features = ["rt"] }
ugg-types = { version = "0.7.0", optional = true }
url = "2.5.4"

[dependencies.tauri-plugin-http]
version = "2.4.2"
default-features = false
features = ["charset", "cookies", "http2", "json", "macos-system-configuration"]

[dependencies.tokio]
version = "1.44.1"
default-features = false
features = ["rt", "rt-multi-thread", "time"]

[features]
default = ["native-tls"]
native-tls = ["tauri-plugin-http/native-tls"]
rustls-tls = ["tauri-plugin-http/rustls-tls"]
tauri-plugin-store = ["dep:tauri-plugin-store"]
ugg-types = ["dep:ugg-types"]
